@@ -1,4 +1,5 @@
 0.04
+ - Update Module::Install to 1.21 version.
 
 0.03 2015-09-23T23:30:47+02:00
  - Add tests for Lego::Part class.
